# bps

./: .gitignore  README.md  REVIEWER_GUIDE.md
01_manuscript_direct_materials/code/: Cargo.toml  README.md
01_manuscript_direct_materials/code/.cargo/: config.toml
01_manuscript_direct_materials/code/docs/: ACCUMULATOR_FIX.md
01_manuscript_direct_materials/code/library_modified/: README.md
01_manuscript_direct_materials/code/scripts/: README.md  generate_paper_figures.py  generate_supplementary_figures.py  run_main_canonical.ps1  run_supplementary_experiments.ps1
01_manuscript_direct_materials/code/src/: README.md  diagnose.rs  main.rs
01_manuscript_direct_materials/code/tfhe-rs/: Makefile
01_manuscript_direct_materials/code/tfhe-rs/.github/ISSUE_TEMPLATE/: feature_request.md
01_manuscript_direct_materials/code/tfhe-rs/backends/tfhe-hpu-backend/python/: README
01_manuscript_direct_materials/code/tfhe-rs/ci/data_extractor/src/: connector.py
01_manuscript_direct_materials/code/tfhe-rs/implementation_notes/tfhe-ntt/: gh_issue_2037_barrett_range.md
01_manuscript_direct_materials/code/tfhe-rs/mockups/tfhe-hpu-mockup/params/: gaussian_44b.toml  gaussian_44b_fast.toml  gaussian_64b.toml  gaussian_64b_fast.toml  gaussian_64b_pfail64.toml  gaussian_64b_pfail64_psi64.toml  tuniform_64b_fast.toml  tuniform_64b_pfail128_psi64.toml  tuniform_64b_pfail64_psi64.toml
01_manuscript_direct_materials/code/tfhe-rs/scripts/: check_scratch_cleanup.py
01_manuscript_direct_materials/code/tfhe-rs/tfhe/c_api_tests/: CMakeLists.txt
(+182 files in other folders)
