[package]
name = "Re-test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "diagnose"
path = "src/diagnose.rs"

[[bin]]
name = "Re-test"
path = "src/main.rs"

[dependencies]
tfhe = { path = "./tfhe-rs/tfhe", features = ["boolean", "shortint", "integer"] }
tfhe-fft = "0.7"
num-traits = "0.2"
rayon = "1.11.0"
paste = "1.0"
